Mon Jul 29 17:30:27 2002  Steve Huston  <shuston@riverace.com>

        * ace/Get_Opt.h (ctor): Changed documented name of the skip_argv0
          argument to skip_args to better reflect that it's not just
          argv[0] that can be skipped.

Mon Jul 29 07:45:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS.cpp (uname): Only check for PROCESSOR_ARCHITECTURE_IA64
          when this is defined. The MingW w32api doesn't define this constant.

Sun Jul 28 17:17:50 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* docs/ACE-subsets.html: Updated the breakdown of files to
	  each subset component so it's consistent with the
 	  $ACE_ROOT/Makefile.  Thanks to Ruslan Zasukhin
 	  <sunshine@public.kherson.ua> for reporting this.

Sun Jul 28 10:31:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_gnuwin32_common.GNU:
          Use -mcpu=$(TCPU) instead of -m$(TCPU), because MingW GCC 3.1
          now gives warnings that -m is deprecated. Thanks to Craig Rodrigues
          for confirming that -m was already deprecated in GCC 2.95.3

Sat Jul 27 17:35:06 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * include/makeinclude/platform_g++_common.GNU (SOFLAGS):

          Allow building of shared libraries with gcc and Solaris ld.
          There wasn't any reason that it wouldn't work.

        * Changelog: Remove >>>>> left out by merge conflicts. People
          should be more careful about checking for conflicts.

Sat Jul 27 16:20:19 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* examples/Service_Configurator/Misc/main.cpp (ACE_TMAIN): Changed
	  the code to be more resilient against errors that occur during
 	  parsing of the svc.conf file.  Thanks to Denginere
 	  <denginere@hotmail.com> for motivating this change.

Sat Jul 27 15:50:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/examples/svcconf/main.cpp:
          Made this file compiling with BCB and Unicode
